--- a/index.html
+++ b/index.html
@@ -28,5 +28,34 @@
         <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
       </div>
     </header>
+    <main>
+      <section class="section-about">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">
+            Exciting tours for adventurous people
+          </h2>
+        </div>
+        <div class="row">
+          <div class="col-1-of-2">
+            <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore officiis, eius dolor autem nam voluptatum earum beatae sequi deleniti rerum magni eaque officia magnam, sit et repellat obcaecati iste necessitatibus.
+            </p>
+            <h3 class="heading-tertiary u-margin-bottom-small">Live adventurous like you never have before</h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis voluptatibus ab incidunt consectetur exercitationem dignissimos! Neque, cum autem illnihil.
+            </p>
+            <a href="#" class="btn-text">Learn more &rarr;</a>
+          </div>
+          <div class="col-1-of-2">
+            <div class="composition">
+              <img src="img/nat-1-large.jpg" alt="photo 1" class="composition__photo composition__photo--p1">
+              <img src="img/nat-2-large.jpg" alt="photo 2" class="composition__photo composition__photo--p2">
+              <img src="img/nat-3-large.jpg" alt="photo 3" class="composition__photo composition__photo--p3">
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
